# xv

./: .gitignore  CMakeLists.txt  INSTALL.txt  LICENSE.txt  NEWS.txt  README.md
.github/workflows/: ci.yml  release.yml
data/images/: hilbert_curve.ras  mandelbrot_fractal.jp2  mandelbrot_fractal_gray.jp2  newtonian_fractal.pcd  overprint.ps  pythagoras_tree.wbmp  pythagoras_tree_small.xpm  sierpinski_triangle.g3  sierpinski_triangle.tif
src/: 00_README  BUGS  CHANGELOG  CMakeLists.txt  CPMASK  IDEAS  INSTALL  Imakefile  Makefile  Makefile.std  README.FLmask  README.debian  README.jumbo  README.pcd  README.xv-non-english-Xman-pages  bggen.c  c2b  cleandir  conf.h.in  config.h  copyright.h  vdcomp.c  vprintf.c  xcmap.c  xv.c  xv.h  xv24to8.c  xv_mgcsfx.sample  xvalg.c  xvbmp.c  xvbrowse.c  xvbutt.c  xvcolor.c  xvcpmask.c  xvctrl.c  xvcut.c  xvdflt.c  xvdflt.h  xvdial.c  xvdir.c  (+55 more)
src/bits/: annot  blur  blurm  br_blk  br_bmp  br_bzip2  br_chr  br_cmpres  br_dir  br_error  br_exe  br_fifo  br_file  br_fits  br_gif  br_iff  br_iris  br_jfif  br_jp2  br_jpc  br_mag  br_maki  br_mgcsfx  br_pbm  br_pcd  br_pcx  br_pds  br_pi  br_pic  br_pic2  br_pm  br_png  br_ps  br_sock  br_sunras  br_targa  br_tiff  br_trash  br_unknown  br_utah  (+106 more)
src/contrib/: xv.desktop  xv.xpm
src/contrib/fedora/: Build-FC5  README
src/contrib/fnkey-scripts/: README  jpegcrop.sh  jpegeditcom.sh  jpeglogrot.sh  jpegrot.sh  jpegundocrop.sh
src/docs/: README.docs  bggen.man  epsf.ps  gif.ack  gif.aspect  help  penn.policy  ppm.5  vdcomp.man  xcmap.man  xv.ann  xv.blurb  xv.man  xvdocs.ps  xvp2p.man  xvpictoppm.man
src/docs/formats/: gif87.doc  pbm.5  pgm.5  xpm.ps
src/docs/manuals/: xvdocs.ps  xvtitle.ps
src/docs/manuals/html/: adding-algorithms.html  adding-formats-1.html  adding-formats-2.html  availability.html  color-allocation.html  color-editor-1.html  color-editor-2.html  color-editor-3.html  command-line-options.html  control-window-1.html  control-window-2.html  control-window-3.html  control-window-4.html  control-window-5.html  control-window-6.html  credits.html  diversity-algorithm.html  external-programs.html  image-window.html  index.html  info-window.html  load-window.html  manindex.html  modifying-behavior-1.html  modifying-behavior-2.html  modifying-behavior-3.html  modifying-behavior-4.html  mouse-keyboard-usage.html  overview.html  postscript-window.html  release-notes.html  rgb-hsv-colorspaces.html  save-window-1.html  save-window-2.html  textview-window.html  visual-schnauzer-1.html  visual-schnauzer-2.html  x-resources.html
src/fi/man1/: xv.1
src/jpeg/: README  jcmaster.c  jdmaster.c
src/pl/man1/: xvpictoppm.1
src/tiff/: CHANGES-v3.0  CHANGES-v3.1  CHANGES-v3.2  CHANGES-v3.3  Copyright  HOWTO  Imakefile  Makefile  Makefile.aix  Makefile.alpha  Makefile.apollo  Makefile.gcc  Makefile.hpux  Makefile.lcc  Makefile.mms  Makefile.mpw  Makefile.next  Makefile.sco  Makefile.sgi  Makefile.std  Makefile.sun  RANLIB.csh  RANLIB.sh  README  README.lib  VERSION  mkg3states.c  mkspans.c  t4.h  tif_apple.c  tif_atari.c  tif_aux.c  tif_ccittrle.c  tif_close.c  tif_compress.c  tif_dir.c  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  (+29 more)
src/unsupt/: FITS.rite  FITS.tar  G3.patch1  G3.tar  INFO.cgm  README  getweather  getweather.ksh  twm.fix  vargs.c  vis  xscm
src/vms/: Make_jpeg.com  Make_tiff.com  Make_xv.com  README.vms  SetUP.com  UnCompress.com  decc_options.opt  decompress.c  includes.h  site.vms  tiff.patches  vaxc_options.opt  vms.c  xv.hlp
src/xvman310a/: adding-algorithms.html  adding-formats-2.html  command-line-options.html  control-window-2.html  control-window-4.html  control-window-6.html  diversity-algorithm.html  external-programs.html  image-window.html  index.html  load-window.html  manindex.html  modifying-behavior-2.html  mouse-keyboard-usage.html  textview-window.html  visual-schnauzer-2.html  x-resources.html
